* Added support for usernames and passwords for SABnzbd and Sickbeard * Removed http:// from the front of every URL in the config, you will need to remove the http:// from each of your URLs in your own config if updating from an older version. This is to support usernames and passwords at the front of URLs. * Updated to official sabnzbd logo * Fixed the actionbutton text being visible on high resolutions.

--- a/intranet/style.css
+++ b/intranet/style.css
@@ -35,7 +35,7 @@ h2 {padding-bottom: 10px;}
 		             0 0 15px rgba(138,197,233,1);
 	}
 
-	.actionButton.big {text-indent: -999px;}
+	.actionButton.big {text-indent: -99999px;}
 	.actionButton.small {padding: 15px; text-decoration: none; color: #222;}
 	.actionButton.big span {width: 206px; height: 97px; display: block; background-position: center; background-repeat: no-repeat;}
 	.actionButton.sickbeard span {background-image: url("images/sickbeard.png");}
